...
                        print("Delete failed:", error)
                    }
                }
            }
            

            .navigationTitle("TravelLog")

            .toolbar {
                Button {
                    showAddScreen = true
                } label: {
                    Image(systemName: "plus")
                }
                .accessibilityIdentifier("AddCountryView")
            }
            .sheet(isPresented: $showAddScreen) {
                AddCountryView()
            }
        }
    }
...
